Move AppMenuButton out of HostedAppButtonContainer to its own file.

Renames it to HostedAppMenuButton. This was requested in a review of a
larger refactor (https://crrev.com/c/983252).

Bug: 791399
Change-Id: I173bb8fa11d427da428252dfcb8f19e779523b87
Reviewed-on: https://chromium-review.googlesource.com/999216
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Matt Giuca <mgiuca@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549101}
Former-commit-id: 8ba3e153b566e20156093dd96fc1134ff86b9640