chrome/browser/ui/views/frame/hosted_app_button_container.h
@@ -11,13 +11,14 @@
 #include "chrome/browser/ui/views/frame/browser_view_button_provider.h"
 #include "chrome/browser/ui/views/location_bar/content_setting_image_view.h"
 #include "chrome/browser/ui/views/toolbar/browser_actions_container.h"
-#include "ui/views/controls/button/menu_button.h"
-#include "ui/views/controls/button/menu_button_listener.h"
 #include "ui/views/view.h"
 
-class AppMenu;
-class HostedAppMenuModel;
 class BrowserView;
+class HostedAppMenuButton;
+
+namespace views {
+class MenuButton;
+}
 
 // A container for hosted app buttons in the title bar.
 class HostedAppButtonContainer : public views::View,
@@ -49,43 +50,6 @@ class HostedAppButtonContainer : public views::View,
   const std::vector<ContentSettingImageView*>&
   GetContentSettingViewsForTesting() const;
 
-  // The 'app menu' button for the hosted app.
-  class AppMenuButton : public views::MenuButton,
-                        public views::MenuButtonListener {
-   public:
-    explicit AppMenuButton(BrowserView* browser_view);
-    ~AppMenuButton() override;
-
-    // Sets the color of the menu button icon.
-    void SetIconColor(SkColor color);
-
-    // views::MenuButtonListener:
-    void OnMenuButtonClicked(views::MenuButton* source,
-                             const gfx::Point& point,
-                             const ui::Event* event) override;
-
-    AppMenu* menu() { return menu_.get(); }
-
-    // Fades the menu button highlight on and off.
-    void StartHighlightAnimation(base::TimeDelta duration);
-
-   private:
-    void FadeHighlightOff();
-
-    // The containing browser view.
-    BrowserView* browser_view_;
-
-    // App model and menu.
-    // Note that the menu should be destroyed before the model it uses, so the
-    // menu should be listed later.
-    std::unique_ptr<HostedAppMenuModel> menu_model_;
-    std::unique_ptr<AppMenu> menu_;
-
-    base::OneShotTimer highlight_off_timer_;
-
-    DISALLOW_COPY_AND_ASSIGN(AppMenuButton);
-  };
-
   void FadeInContentSettingButtons();
 
   // views::View:
@@ -114,7 +78,7 @@ class HostedAppButtonContainer : public views::View,
   base::OneShotTimer fade_in_content_setting_buttons_timer_;
 
   // Owned by the views hierarchy.
-  AppMenuButton* app_menu_button_;
+  HostedAppMenuButton* app_menu_button_;
   ContentSettingsContainer* content_settings_container_;
   BrowserActionsContainer* browser_actions_container_;
 
